--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,40 @@
         width: 100%; /*provvisorio*/
         height: 600px; /*provvisorio*/
     }
+
+    /* start jumbotron's css */
+        .jumbotron .container{
+            padding: 80px;
+            background-color: tomato;
+            width: 100%; /*provvisorio*/
+            height: 90%; /*provvisorio*/
+        }
+
+        /* start container's css */
+            .container .titolo{
+                background-color: violet;
+                width: 90%; 
+                margin: auto;
+                height: 25%; /*provvisorio*/
+            }
+
+            .container .content{
+                background-color: yellow;
+                width: 30%; 
+                margin: 5%;
+                height:40%; /*provvisorio*/
+                float: left;
+            }
+
+            .container .img{
+                background-color: blue;
+                width: 50%; 
+                margin: 5%;
+                height: 100%; /*provvisorio*/
+                float: right;
+            }
+        /* container's css end */
+    /* jumbotron's css end */
 /* header's css end */
 
 /* start main's css */
@@ -48,11 +82,65 @@
         height: 600px; /*provvisorio*/
     }
 
+    /* start piano_dropbox's css */
+        .piano_dropbox .container{
+            background-color: tomato;
+            width: 80%; /*provvisorio*/
+            height: 100%; /*provvisorio*/
+            margin: auto;
+            padding-top: 60px;
+        }
+
+            /* start container's css */
+                .container h2{
+                    background-color: violet;
+                    width: 80%; 
+                    height: 5%; /*provvisorio*/
+                }
+
+                .container .fatturazione{
+                    background-color: cyan;
+                    width: 100%;
+                    height: 95%; /*provvisorio*/
+                    margin-top: 20px;
+                }
+            /* container's css end */
+    /* piano_dropbox's css end */
+
     main .partner_dropbox{
         background-color: darkorange;
         width: 100%; /*provvisorio*/
         height: 300px; /*provvisorio*/
     }
+
+        /* start partner_dropbox's css */
+            .partner_dropbox .container{
+                background-color: chartreuse;
+                width: 80%; /*provvisorio*/
+                height: 100%; /*provvisorio*/
+                margin: auto;
+            }
+
+            .partner_dropbox .container:after{
+                content:"";
+                display: table;
+                clear: both;
+            }
+
+            .container .img{
+                background-color: blue;
+                width: 40%;
+                height: 80%;
+                float: left;
+            }
+
+            .container .content{
+                background-color: red;
+                width: 40%;
+                height: 80%;
+                float: left;
+            }
+        /* partner_dropbox's css end */
 
     main .operazioni_dropbox_business{
         background-color: darkolivegreen;
