--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,15 @@
                 height: 25%; /*provvisorio*/
             }
 
-            .container .content{
+            .jumbotron .container .content{
                 background-color: yellow;
                 width: 30%; 
                 margin: 5%;
-                height:40%; /*provvisorio*/
+                height: 40%; /*provvisorio*/
                 float: left;
             }
 
-            .container .img{
+            .jumbotron .container .img{
                 background-color: blue;
                 width: 50%; 
                 margin: 5%;
@@ -92,7 +92,7 @@
         }
 
             /* start container's css */
-                .container h2{
+                .piano_dropbox .container h2{
                     background-color: violet;
                     width: 80%; 
                     height: 5%; /*provvisorio*/
@@ -127,17 +127,17 @@
                 clear: both;
             }
 
-            .container .img{
+            .partner_dropbox .container .img{
                 background-color: blue;
-                width: 40%;
-                height: 80%;
+                width: 50%;
+                height: 100%;
                 float: left;
             }
 
-            .container .content{
+            .partner_dropbox .container .content{
                 background-color: red;
-                width: 40%;
-                height: 80%;
+                width: 50%;
+                height: 100%;
                 float: left;
             }
         /* partner_dropbox's css end */
@@ -147,6 +147,42 @@
         width: 100%; /*provvisorio*/
         height: 600px; /*provvisorio*/
     }
+
+        .operazioni_dropbox_business .container{
+            background-color: yellow;
+            width: 80%; /*provvisorio*/
+            height: 100%; /*provvisorio*/
+            margin: auto;
+        }
+
+        .operazioni_dropbox_business .container h2{
+                background-color: pink;
+                height: 5%; /*provvisorio*/
+                width: 80%; /*provvisorio*/
+            }
+
+            .operazioni_dropbox_business .container .row{
+                background-color: maroon;
+                width: 100%;
+                height: 40%;
+                margin: 2% 0%;
+            }
+
+            .operazioni_dropbox_business .row .content{
+                background-color: red;
+                width: 30%;
+                height: 100%;
+                display: inline-block;
+            }
+            
+            .operazioni_dropbox_business .row .content:nth-child(2){
+                margin: 0% 4%;
+            }
+
+            .operazioni_dropbox_business .row .content:nth-child(5){
+                margin: 0% 4%;
+            }
+
 
     main .team_dropbox_business{
         background-color: brown;
