--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
         background-color: grey;
         width: 100%; /*provvisorio*/
         height: 50px; /*provvisorio*/
+        position: fixed;
     }
 
     /* start menu's css */
@@ -201,12 +202,82 @@
         width: 100%; /*provvisorio*/
         height: 400px; /*provvisorio*/
     }
+
+    /* start banner_prova_gratuita's css */
+        .banner_prova_gratuita .container{
+            background-color: cyan;
+            width: 80%; /*provvisorio*/
+            height: 100%; /*provvisorio*/
+            margin: auto;
+        }
+
+    /* banner_prova_gratuita's css end*/
+
+    /* start faq's css */
+        .faq .container{
+            background-color: red;
+            width: 80%; /*provvisorio*/
+            height: 100%; /*provvisorio*/
+            margin: auto;
+        }
+
+            .faq .container .domande{
+                background-color: yellow;
+                width: 100%;
+                height: 10%;
+                
+            }
+
+            .faq .container .content{
+                background-color: green;
+                width: 100%;
+                height: 10%;
+                margin: 5% 0px;
+            }
+
+    /* faq's css end */
 /* main's css end */
 
 /* start footer's css */
-    footer .container{
+    footer{
         background-color: black;
         width: 100%; /*provvisorio*/
         height: 300px; /*provvisorio*/
+    }
+
+    footer .container{
+        background-color: greenyellow;
+        width: 80%; /*provvisorio*/
+        height: 250px; /*provvisorio*/
+        margin: auto;
+    }
+
+        footer .container::after{
+            content: "";
+            display: table;
+            clear: both;
+        }
+
+        footer .container .cln{
+            background-color: orange;
+            width: 18.4%;
+            height: 100%;
+            float: left;
+            margin: 0% 0% 2% 2%;
+        }
+
+        footer .container .cln:first-child{
+            margin-left: 0%;
+        }
+
+        footer .container .cln:last-child{
+            margin-right: 0%;
+        }
+
+    footer .down{
+        background-color: red;
+        width: 80%;
+        height: 50px;
+        margin: auto;
     }
 /* footer's css end */
