--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,37 @@
                     height: 95%; /*provvisorio*/
                     margin-top: 20px;
                 }
+
+                    .piano_dropbox .fatturazione .content{
+                        background-color: red;
+                        width: 30%;
+                        height: 60%;
+                        float: left;
+                        margin: 0% 0% 5% 5%;
+                    }
+
+                    .piano_dropbox .fatturazione .content:first-child{
+                        margin-left: 0%;
+                    }
+
+                    .piano_dropbox .fatturazione .content:last-child{
+                        margin-right: 0%;
+                    }
+
+                    .piano_dropbox .fatturazione .down{
+                        background-color: red;
+                        width: 100%;
+                        height: 20%;
+                        float: left;
+                        margin: 5% 0%;
+                    }
+
+                    .piano_dropbox .fatturazione .conten::after{
+                        content: "";
+                        display: table;
+                        clear: both;
+                    }
+
             /* container's css end */
     /* piano_dropbox's css end */
 
