--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,11 @@ body{
                 .content_left .content{
                     margin-top: 15px;
                 }
+                
+                .content_left .btn a{
+                    text-decoration: none;
+                    color: #fff;
+                }
 
                 .content_left .fas{
                     margin: 30px 0px;
@@ -387,6 +392,10 @@ body{
                 margin: auto;
             }
 
+            .operazioni_dropbox_business .container h2{
+                margin-top: 50px;
+            }
+
             .operazioni_dropbox_business .container .row{
                 margin-top: 20px;
             }
@@ -414,17 +423,16 @@ body{
 
             .operazioni_dropbox_business .marchettata{
                 width: 50vw;
-                margin: 50px 0px;
+                margin-bottom: 50px;
+                margin-top: 100px;
             }
 
                 .operazioni_dropbox_business .marchettata div:first-child{
-                    
                     font-size: 30px;
                     font-weight: bold;
                 }
 
                 .operazioni_dropbox_business .marchettata div:nth-child(2){
-                    
                     color: #176fff;
                 }
 
@@ -453,6 +461,7 @@ body{
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
+                filter: invert(100%) sepia(0%) saturate(7476%) hue-rotate(110deg) brightness(98%) contrast(108%);
             }
 
             .tdb_left .quadrato{
@@ -589,6 +598,20 @@ body{
                     line-height: 80px;
                 }
 
+                .faq .domande:after{
+                    content: "";
+                    display: table;
+                    clear: both;
+                }
+
+                    .faq .domande span:first-child{
+                        float: left;
+                    }
+
+                    .faq .domande span:last-child{
+                        float: right;
+                    }
+
                 .faq .domande:last-child{
                     border-bottom: 1px solid lightgrey;
                 }
@@ -645,6 +668,7 @@ body{
 
             footer .cln li{
                 list-style: none;
+                margin: 10px 0px;
             }
 
             footer .cln li a{
@@ -658,9 +682,9 @@ body{
     }
 
         footer .down .lingua{
-            color: #fff;
-            padding: 30px 20px;
-            font-size: 10px;
+            color: #989898;
+            padding: 30px 0px;
+            font-size: 15px;
             margin-top: 100px;
             display: inline-block;
             border-top: 1px solid #fff;
