--- a/bonus/css/style_v_2.0.css
+++ b/bonus/css/style_v_2.0.css
@@ -143,7 +143,7 @@ body{
     color: #000;
 }
 
-.contenitore_dx .supporto:hover{
+.bordo_menu:hover{
     border-bottom: 5px solid greenyellow;
 }
 
@@ -156,8 +156,9 @@ body{
     display: none;
     background-color: rgb(233, 233, 233);
     position: absolute;
-    top: 85px;
-    right: 370px;
+    top: 75px;
+    left: 0px;
+    width: 250px;
 }
 
 .contenitore_dx .supporto .hover_in li{
@@ -180,7 +181,7 @@ body{
 
 .jumbotron .contenitore{
     width: 90%;
-    padding: 10vh 0vw;
+    padding: 120px 0px;
     margin: auto;
 }
 
@@ -513,6 +514,10 @@ main .fatturazione .contenuto span{
 
 .line_height_80{
     line-height: 80px;
+}
+
+.line_height_70{
+    line-height: 70px;
 }
 
 .faq{
