fix icone e testo nelle colonne

--- a/css/style_v_2.0.css
+++ b/css/style_v_2.0.css
@@ -156,6 +156,10 @@ body{
     font-size: 4rem;
 }
 
+.font_size_2rem{
+    font-size: 2rem;
+}
+
 .font_weight_bold{
     font-weight: bold;
 }
@@ -218,7 +222,7 @@ body{
 .presentazione .cln{
     border: 1px solid lightgray;
     width: calc(100% / 3 - 20px);
-    height: 1100px; /*ATTENZIONEEEEEEEEEE che valore inserire correttamnete, mettere in vh??*/ 
+    min-height: 1000px;
 }
 
 .text_align_center{
@@ -226,6 +230,18 @@ body{
 }
 
 main .fatturazione .contenuto:after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.contenitore_interno .contenuto::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.contenitore_interno .punto_saliente::after{
     content: "";
     display: table;
     clear: both;
@@ -282,6 +298,10 @@ main .fatturazione .contenuto span{
 
 .padding_50_0_0_0{
     padding: 50px 0px;
+}
+
+.padding_0_5{
+    padding: 0px 5px;
 }
 
 .color_grey{
