--- a/css/style_v_2.0.css
+++ b/css/style_v_2.0.css
@@ -16,6 +16,10 @@ body{
     width: 100%;
 }
 
+.min_width_1175px{
+    min-width: 1175px;
+}
+
 .contenitore:after{
     content: "";
     display: table;
