--- a/css/style_v_2.0.css
+++ b/css/style_v_2.0.css
@@ -82,6 +82,10 @@ body{
     margin-bottom: 0px;
 }
 
+.bottom_150px_neg{
+    bottom:-150px;
+}
+
 .margin_80{
     margin: 80px;
 }
@@ -152,7 +156,7 @@ body{
 
 .jumbotron .contenitore{
     width: 90%;
-    padding: 10vh 0vw;
+    padding: 80px 0px;
     margin: auto;
 }
 
@@ -184,7 +188,6 @@ body{
 
 .jumbotron .width_img{
     max-width: 100%;
-    height: 500px;
 }
 
 .jumbotron .contenuto_dx.position_absolute{
